--- a/dev/tutorial/index.html
+++ b/dev/tutorial/index.html
@@ -7,24 +7,25 @@ using Zygote: Zygote</code></pre><p>Constructing the wrapper</p><pre><code class
 f_grad1(x, θ) = x - θ
 lmo = UnitSimplexOracle(1.0)  # ... to the probability simplex
 dfw = DiffFW(f, f_grad1, lmo);  # ... is equivalent to a simplex projection</code></pre><p>Calling the wrapper</p><pre><code class="language-julia hljs">θ = rand(10)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">10-element Vector{Float64}:
- 0.300030460072818
- 0.6872777012755744
- 0.8568514886465858
- 0.323903091725261
- 0.8786419965139313
- 0.0916362858029951
- 0.6389548522730417
- 0.29089474608332
- 0.4779956250484795
- 0.798441118556476</code></pre><pre><code class="language-julia hljs">frank_wolfe_kwargs = (max_iteration=100, epsilon=1e-4)
-y = dfw(θ; frank_wolfe_kwargs)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">10-element SparseArrays.SparseVector{Float64, Int64} with 5 stored entries:
-  [2 ]  =  0.115253
-  [3 ]  =  0.284826
-  [5 ]  =  0.306574
-  [7 ]  =  0.0669019
-  [10]  =  0.226445</code></pre><pre><code class="language-julia hljs">y_true = simplex_projection(θ)
-@test Vector(y) ≈ Vector(y_true) atol = 1e-3</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi"><span class="sgr32"><span class="sgr1">Test Passed</span></span></code></pre><p>Differentiating the wrapper</p><pre><code class="language-julia hljs">J1 = Zygote.jacobian(_θ -&gt; dfw(_θ; frank_wolfe_kwargs), θ)[1]
+ 0.7779214770326496
+ 0.4575852417573214
+ 0.19304810728871113
+ 0.4861352447977171
+ 0.29967839723137746
+ 0.7878440666483839
+ 0.15949838415740647
+ 0.7436326234839317
+ 0.6848815743873518
+ 0.8832813821145162</code></pre><pre><code class="language-julia hljs">frank_wolfe_kwargs = (; max_iteration=100, epsilon=1e-4)
+y, stats = dfw(θ, frank_wolfe_kwargs)
+y</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">10-element SparseArrays.SparseVector{Float64, Int64} with 5 stored entries:
+  [1 ]  =  0.202508
+  [6 ]  =  0.212365
+  [8 ]  =  0.168086
+  [9 ]  =  0.109324
+  [10]  =  0.307717</code></pre><pre><code class="language-julia hljs">y_true = simplex_projection(θ)
+@test Vector(y) ≈ Vector(y_true) atol = 1e-3</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi"><span class="sgr32"><span class="sgr1">Test Passed</span></span></code></pre><p>Differentiating the wrapper</p><pre><code class="language-julia hljs">J1 = Zygote.jacobian(_θ -&gt; dfw(_θ, frank_wolfe_kwargs)[1], θ)[1]
 J1_true = Zygote.jacobian(simplex_projection, θ)[1]
-@test J1 ≈ J1_true atol = 1e-3</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi"><span class="sgr32"><span class="sgr1">Test Passed</span></span></code></pre><pre><code class="language-julia hljs">J2 = ForwardDiff.jacobian(_θ -&gt; dfw(_θ; frank_wolfe_kwargs), θ)
+@test J1 ≈ J1_true atol = 1e-3</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi"><span class="sgr32"><span class="sgr1">Test Passed</span></span></code></pre><pre><code class="language-julia hljs">J2 = ForwardDiff.jacobian(_θ -&gt; dfw(_θ, frank_wolfe_kwargs)[1], θ)
 J2_true = ForwardDiff.jacobian(simplex_projection, θ)
-@test J2 ≈ J2_true atol = 1e-3</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi"><span class="sgr32"><span class="sgr1">Test Passed</span></span></code></pre><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.10.1 on <span class="colophon-date" title="Wednesday 2 April 2025 09:20">Wednesday 2 April 2025</span>. Using Julia version 1.11.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+@test J2 ≈ J2_true atol = 1e-3</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi"><span class="sgr32"><span class="sgr1">Test Passed</span></span></code></pre><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.10.1 on <span class="colophon-date" title="Friday 11 April 2025 06:25">Friday 11 April 2025</span>. Using Julia version 1.11.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
